--- a/shop.html
+++ b/shop.html
@@ -1328,21 +1328,21 @@
         privacyPolicyPageUuid: "ae35d232-6b85-4b40-94b3-c6de7dd6d9f0",
         cookiesSettingsPageUuid: "b919df44-ba6d-48a5-a411-fd52f4f54abf",
         pagePathMap: {
-            "53c60bd7-6aee-4cb1-80c0-f46931714f83": "",
-            "6a6aa506-a5f2-46f7-b520-58bcdcf543fb": "shop/",
-            "9936ea17-cb2d-4713-ab13-5190b564c077": "blog/",
-            "e7fbb232-de88-4e13-bfe5-81083fb7396d": "about-us/",
-            "67e148d0-546c-446f-a4a0-51d35406ec9c": "events/",
-            "67e148d0-546c-446f-a4a0-51d35406ec9d": "donations/",
-            "e3b0b178-9634-4c3b-8f2e-e361cc1513ed": "imprint/",
-            "ae35d232-6b85-4b40-94b3-c6de7dd6d9f0": "privacy-policy/",
-            "b919df44-ba6d-48a5-a411-fd52f4f54abf": "cookie-settings/",
-            "46ea6cdc-040b-484c-9019-ab9504c3e303": "return-policy/",
-            "d366f5d9-aac0-4372-a2bf-ea72e00de9b1": "terms-and-conditions/",
-            "b80df1e3-33a6-4194-84b4-243760d0edde": "cart/",
-            "27dbe0e0-250b-4c08-be9a-39d78230f57d": "confirmation/",
-            "cfb0297c-b932-4b16-89f3-718fd5549e8c": "checkout/",
-            "a2982783-06b2-4bf2-8357-f230356f73b6": "delivery-policy/",
+          "53c60bd7-6aee-4cb1-80c0-f46931714f83": "",
+          "6a6aa506-a5f2-46f7-b520-58bcdcf543fb": "shop",
+          "9936ea17-cb2d-4713-ab13-5190b564c077": "blog",
+          "e7fbb232-de88-4e13-bfe5-81083fb7396d": "about-us",
+          "67e148d0-546c-446f-a4a0-51d35406ec9c": "events",
+          "67e148d0-546c-446f-a4a0-51d35406ec9b": "donations",
+          "e3b0b178-9634-4c3b-8f2e-e361cc1513ed": "imprint",
+          "ae35d232-6b85-4b40-94b3-c6de7dd6d9f0": "privacy-policy",
+          "b919df44-ba6d-48a5-a411-fd52f4f54abf": "cookie-settings",
+          "46ea6cdc-040b-484c-9019-ab9504c3e303": "return-policy",
+          "d366f5d9-aac0-4372-a2bf-ea72e00de9b1": "terms-and-conditions",
+          "b80df1e3-33a6-4194-84b4-243760d0edde": "cart",
+          "27dbe0e0-250b-4c08-be9a-39d78230f57d": "confirmation",
+          "cfb0297c-b932-4b16-89f3-718fd5549e8c": "checkout",
+          "a2982783-06b2-4bf2-8357-f230356f73b6": "delivery-policy",
         },
         fileLinkMap: {},
         hideJimdoAd: false,
