--- a/index.html
+++ b/index.html
@@ -143,19 +143,19 @@
                                                       <a href="https://recon-5.jimdosite.com/" class="r0r5Y bE5vM _1UoS- _3vXyn"><span class="IY42D">Home</span></a>
                                                   </li>
                                                   <li class="_1U_q8 _1wl3d">
-                                                      <a href="https://recon-5.jimdosite.com/shop/" class="r0r5Y bE5vM _3vXyn"><span class="IY42D">Shop</span></a>
+                                                      <a href="https://recon-5.jimdosite.com/shop" class="r0r5Y bE5vM _3vXyn"><span class="IY42D">Shop</span></a>
                                                   </li>
                                                   <li class="_1U_q8 _1wl3d">
-                                                      <a href="https://recon-5.jimdosite.com/blog/" class="r0r5Y bE5vM _3vXyn"><span class="IY42D">Blog</span></a>
+                                                      <a href="https://recon-5.jimdosite.com/blog" class="r0r5Y bE5vM _3vXyn"><span class="IY42D">Blog</span></a>
                                                   </li>
                                                   <li class="_1U_q8 _1wl3d">
-                                                      <a href="https://recon-5.jimdosite.com/about-us/" class="r0r5Y bE5vM _3vXyn"><span class="IY42D">About us</span></a>
+                                                      <a href="https://recon-5.jimdosite.com/about-us" class="r0r5Y bE5vM _3vXyn"><span class="IY42D">About us</span></a>
                                                   </li>
                                                   <li class="_1U_q8 _1wl3d">
-                                                      <a href="https://recon-5.jimdosite.com/events/" class="r0r5Y bE5vM _3vXyn"><span class="IY42D">Events</span></a>
+                                                      <a href="https://recon-5.jimdosite.com/events" class="r0r5Y bE5vM _3vXyn"><span class="IY42D">Events</span></a>
                                                   </li>
                                                   <li class="_1U_q8 _1wl3d">
-                                                    <a href="https://recon-5.jimdosite.com/donations/" class="r0r5Y bE5vM _3vXyn"><span class="IY42D">Donations</span></a>
+                                                    <a href="https://recon-5.jimdosite.com/donations" class="r0r5Y bE5vM _3vXyn"><span class="IY42D">Donations</span></a>
                                                 </li>
                                               </ul>
                                           </nav>
@@ -178,27 +178,27 @@
                                               </li>
                                               <li class="_371wn _1-X3y">
                                                   <div class="_2GyAR">
-                                                      <a href="https://recon-5.jimdosite.com/shop/" class="r0r5Y bE5vM _3vXyn _10PPp"><span class="IY42D">Shop</span></a>
+                                                      <a href="https://recon-5.jimdosite.com/shop" class="r0r5Y bE5vM _3vXyn _10PPp"><span class="IY42D">Shop</span></a>
                                                   </div>
                                               </li>
                                               <li class="_371wn _1-X3y">
                                                   <div class="_2GyAR">
-                                                      <a href="https://recon-5.jimdosite.com/blog/" class="r0r5Y bE5vM _3vXyn _10PPp"><span class="IY42D">Blog</span></a>
+                                                      <a href="https://recon-5.jimdosite.com/blog" class="r0r5Y bE5vM _3vXyn _10PPp"><span class="IY42D">Blog</span></a>
                                                   </div>
                                               </li>
                                               <li class="_371wn _1-X3y">
                                                   <div class="_2GyAR">
-                                                      <a href="https://recon-5.jimdosite.com/about-us/" class="r0r5Y bE5vM _3vXyn _10PPp"><span class="IY42D">About us</span></a>
+                                                      <a href="https://recon-5.jimdosite.com/about-us" class="r0r5Y bE5vM _3vXyn _10PPp"><span class="IY42D">About us</span></a>
                                                   </div>
                                               </li>
                                               <li class="_371wn _1-X3y">
                                                   <div class="_2GyAR">
-                                                      <a href="https://recon-5.jimdosite.com/events/" class="r0r5Y bE5vM _3vXyn _10PPp"><span class="IY42D">Events</span></a>
+                                                      <a href="https://recon-5.jimdosite.com/events" class="r0r5Y bE5vM _3vXyn _10PPp"><span class="IY42D">Events</span></a>
                                                   </div>
                                               </li>
                                               <li class="_371wn _1-X3y">
                                                 <div class="_2GyAR">
-                                                    <a href="https://recon-5.jimdosite.com/donations/" class="r0r5Y bE5vM _3vXyn _10PPp"><span class="IY42D">Donations</span></a>
+                                                    <a href="https://recon-5.jimdosite.com/donations" class="r0r5Y bE5vM _3vXyn _10PPp"><span class="IY42D">Donations</span></a>
                                                 </div>
                                             </li>
                                           </ul>
