--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                           </a>
                                       </div>
                                       <div class="_1yXWX">
-                                          <a href="https://recon-5.jimdosite.com/" class="_2XPuU">
+                                          <a href="https://recon.bogman.info/" class="_2XPuU">
                                               <div class="_2LU_w _1rS1_">
                                                   <div class="VMMI-"><p class="_2rJOl"></p></div>
                                               </div>
@@ -140,22 +140,22 @@
                                           <nav>
                                               <ul class="_2Cs82 _3zkCj _1uG4Y">
                                                   <li class="_1U_q8 _1wl3d">
-                                                      <a href="https://recon-5.jimdosite.com/" class="r0r5Y bE5vM _1UoS- _3vXyn"><span class="IY42D">Home</span></a>
+                                                      <a href="https://recon.bogman.info/" class="r0r5Y bE5vM _1UoS- _3vXyn"><span class="IY42D">Home</span></a>
                                                   </li>
                                                   <li class="_1U_q8 _1wl3d">
-                                                      <a href="https://recon-5.jimdosite.com/shop" class="r0r5Y bE5vM _3vXyn"><span class="IY42D">Shop</span></a>
+                                                      <a href="https://recon.bogman.info/shop" class="r0r5Y bE5vM _3vXyn"><span class="IY42D">Shop</span></a>
                                                   </li>
                                                   <li class="_1U_q8 _1wl3d">
-                                                      <a href="https://recon-5.jimdosite.com/blog" class="r0r5Y bE5vM _3vXyn"><span class="IY42D">Blog</span></a>
+                                                      <a href="https://recon.bogman.info/blog" class="r0r5Y bE5vM _3vXyn"><span class="IY42D">Blog</span></a>
                                                   </li>
                                                   <li class="_1U_q8 _1wl3d">
-                                                      <a href="https://recon-5.jimdosite.com/about-us" class="r0r5Y bE5vM _3vXyn"><span class="IY42D">About us</span></a>
+                                                      <a href="https://recon.bogman.info/about-us" class="r0r5Y bE5vM _3vXyn"><span class="IY42D">About us</span></a>
                                                   </li>
                                                   <li class="_1U_q8 _1wl3d">
-                                                      <a href="https://recon-5.jimdosite.com/events" class="r0r5Y bE5vM _3vXyn"><span class="IY42D">Events</span></a>
+                                                      <a href="https://recon.bogman.info/events" class="r0r5Y bE5vM _3vXyn"><span class="IY42D">Events</span></a>
                                                   </li>
                                                   <li class="_1U_q8 _1wl3d">
-                                                    <a href="https://recon-5.jimdosite.com/donations" class="r0r5Y bE5vM _3vXyn"><span class="IY42D">Donations</span></a>
+                                                    <a href="https://recon.bogman.info/donations" class="r0r5Y bE5vM _3vXyn"><span class="IY42D">Donations</span></a>
                                                 </li>
                                               </ul>
                                           </nav>
@@ -164,7 +164,7 @@
                                   <div class="RnIH0" style="flex-basis: 234px;">
                                       <div class="_OAVS">
                                           <div>
-                                              <a class="_2TLyx Y-Rie _27iTr _24E0z -Zs_x _8xAV3 css-fz8li5" href="https://recon-5.jimdosite.com/events/" draggable="false"><span class="_2f2oQ css-1wta0f">ADVANCED x RECON</span></a>
+                                              <a class="_2TLyx Y-Rie _27iTr _24E0z -Zs_x _8xAV3 css-fz8li5" href="https://recon.bogman.info/events/" draggable="false"><span class="_2f2oQ css-1wta0f">ADVANCED x RECON</span></a>
                                           </div>
                                       </div>
                                   </div>
@@ -173,32 +173,32 @@
                                           <ul class="_1DQmA">
                                               <li class="_371wn _1-X3y">
                                                   <div class="_2GyAR">
-                                                      <a href="https://recon-5.jimdosite.com/" class="r0r5Y bE5vM _1UoS- _3vXyn _10PPp"><span class="IY42D">Home</span></a>
+                                                      <a href="hhttps://recon.bogman.info/" class="r0r5Y bE5vM _1UoS- _3vXyn _10PPp"><span class="IY42D">Home</span></a>
                                                   </div>
                                               </li>
                                               <li class="_371wn _1-X3y">
                                                   <div class="_2GyAR">
-                                                      <a href="https://recon-5.jimdosite.com/shop" class="r0r5Y bE5vM _3vXyn _10PPp"><span class="IY42D">Shop</span></a>
+                                                      <a href="https://recon.bogman.info/shop" class="r0r5Y bE5vM _3vXyn _10PPp"><span class="IY42D">Shop</span></a>
                                                   </div>
                                               </li>
                                               <li class="_371wn _1-X3y">
                                                   <div class="_2GyAR">
-                                                      <a href="https://recon-5.jimdosite.com/blog" class="r0r5Y bE5vM _3vXyn _10PPp"><span class="IY42D">Blog</span></a>
+                                                      <a href="https://recon.bogman.info/blog" class="r0r5Y bE5vM _3vXyn _10PPp"><span class="IY42D">Blog</span></a>
                                                   </div>
                                               </li>
                                               <li class="_371wn _1-X3y">
                                                   <div class="_2GyAR">
-                                                      <a href="https://recon-5.jimdosite.com/about-us" class="r0r5Y bE5vM _3vXyn _10PPp"><span class="IY42D">About us</span></a>
+                                                      <a href="https://recon.bogman.info/about-us" class="r0r5Y bE5vM _3vXyn _10PPp"><span class="IY42D">About us</span></a>
                                                   </div>
                                               </li>
                                               <li class="_371wn _1-X3y">
                                                   <div class="_2GyAR">
-                                                      <a href="https://recon-5.jimdosite.com/events" class="r0r5Y bE5vM _3vXyn _10PPp"><span class="IY42D">Events</span></a>
+                                                      <a href="https://recon.bogman.info/events" class="r0r5Y bE5vM _3vXyn _10PPp"><span class="IY42D">Events</span></a>
                                                   </div>
                                               </li>
                                               <li class="_371wn _1-X3y">
                                                 <div class="_2GyAR">
-                                                    <a href="https://recon-5.jimdosite.com/donations" class="r0r5Y bE5vM _3vXyn _10PPp"><span class="IY42D">Donations</span></a>
+                                                    <a href="https://recon.bogman.info/donations" class="r0r5Y bE5vM _3vXyn _10PPp"><span class="IY42D">Donations</span></a>
                                                 </div>
                                             </li>
                                           </ul>
