--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
       hideJimdoAd: false,
       isTrackingEnabled: false,
       jimdoStatisticsStatus: false,
-      domain: "recon-5.jimdosite.com",
+      domain: "recon.bogman.info",
       colorPalette: {
           type: "custom",
           colors: { Black: "#000000", White: "#FFFFFF", Shade1: "#cdc7b3", Shade2: "#1c1c1c", MainColor: "#4f4f4f", SecondaryColor: "#f7c923" },
