--- a/shop/index.html
+++ b/shop/index.html
@@ -12,7 +12,7 @@
     <script>
         window.__dolphin_environment__ = 'prod';
     </script>
-    <script type="application/ld+json">{"@context":"https://www.schema.org","@type":"product","brand":{"@type":"brand","name":"recon.","url":"https://recon-5.jimdosite.com","logo":"https://jimdo-storage.freetls.fastly.net//image/262255773/35becf47-13a4-4901-b807-12e521a7ce08.png"},"name":"Up cycled and on demand garments","description":"","image":["https://jimdo-storage.freetls.fastly.net//image/264749389/cccfbfe8-11e1-4a40-b5cc-d4a9b4340a84.png","https://jimdo-storage.freetls.fastly.net//image/264749553/728c7e3d-69d3-4511-b245-ca465782f544.png","https://jimdo-storage.freetls.fastly.net//image/265306200/4d68e0f6-806d-421f-b77b-3ce1888c5a4b.jpg","https://jimdo-storage.freetls.fastly.net//image/265306200/4d68e0f6-806d-421f-b77b-3ce1888c5a4b.jpg"],"url":"https://recon-5.jimdosite.com/shop/","mainEntityOfPage":"https://recon-5.jimdosite.com/shop/","offers":{"@type":"offer","price":80 - 200,"priceCurrency":"EUR","itemCondition":"https://schema.org/NewCondition","availability":"https://schema.org/OutOfStock","url":"https://recon-5.jimdosite.com/shop/"}}</script>
+    <script type="application/ld+json">{"@context":"https://www.schema.org","@type":"product","brand":{"@type":"brand","name":"recon.","url":"https://recon-5.jimdosite.com","logo":"https://jimdo-storage.freetls.fastly.net//image/262255773/35becf47-13a4-4901-b807-12e521a7ce08.png"},"name":"Up cycled and on demand garments","description":"","image":["https://jimdo-storage.freetls.fastly.net//image/264749389/cccfbfe8-11e1-4a40-b5cc-d4a9b4340a84.png","https://jimdo-storage.freetls.fastly.net//image/264749553/728c7e3d-69d3-4511-b245-ca465782f544.png","https://jimdo-storage.freetls.fastly.net//image/265306200/4d68e0f6-806d-421f-b77b-3ce1888c5a4b.jpg","https://jimdo-storage.freetls.fastly.net//image/265306200/4d68e0f6-806d-421f-b77b-3ce1888c5a4b.jpg"],"url":"https://recon.bogman.info/shop/","mainEntityOfPage":"https://recon.bogman.info/shop/","offers":{"@type":"offer","price":80 - 200,"priceCurrency":"EUR","itemCondition":"https://schema.org/NewCondition","availability":"https://schema.org/OutOfStock","url":"https://recon.bogman.info/shop/"}}</script>
     <meta name="robots" content="index, follow, archive"><meta name="twitter:card" content="summary_large_image">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Shop | recon.">
@@ -102,7 +102,7 @@
                                 <div class="_1K-Cu _2X_xx _3JryN">
                                     <div class="tZTy2" style="flex-basis: 234px;">
                                         <div class="_1GQ3E">
-                                            <a href="https://recon-5.jimdosite.com/" class="_2XPuU">
+                                            <a href="https://recon.bogman.info/" class="_2XPuU">
                                                 <div style="width: 198px; max-width: 100%; padding: 15.4px 0; transition: width 300ms;">
                                                     <div class="UEFNi" style="padding-bottom: 22.27%;">
                                                         <div class="_1oRwn">
@@ -128,7 +128,7 @@
                                             </a>
                                         </div>
                                         <div class="_1yXWX">
-                                            <a href="https://recon-5.jimdosite.com/" class="_2XPuU">
+                                            <a href="https://recon.bogman.info/shop/" class="_2XPuU">
                                                 <div class="_2LU_w _1rS1_">
                                                     <div class="css-19pa3ra _8xAV3"><p class="_2rJOl"></p></div>
                                                 </div>
@@ -140,22 +140,22 @@
                                             <nav>
                                                 <ul class="_2Cs82 _3zkCj _1uG4Y">
                                                     <li class="_1U_q8 _1wl3d">
-                                                        <a href="https://recon-5.jimdosite.com/" class="r0r5Y _1nbLK _3vXyn"><span class="IY42D">Home</span></a>
+                                                        <a href="https://recon.bogman.info/" class="r0r5Y _1nbLK _3vXyn"><span class="IY42D">Home</span></a>
                                                     </li>
                                                     <li class="_1U_q8 _1wl3d">
-                                                        <a href="https://recon-5.jimdosite.com/shop/" class="r0r5Y _1nbLK _1UoS- _3vXyn"><span class="IY42D">Shop</span></a>
+                                                        <a href="https://recon.bogman.info/shop/" class="r0r5Y _1nbLK _1UoS- _3vXyn"><span class="IY42D">Shop</span></a>
                                                     </li>
                                                     <li class="_1U_q8 _1wl3d">
-                                                        <a href="https://recon-5.jimdosite.com/blog/" class="r0r5Y _1nbLK _3vXyn"><span class="IY42D">Blog</span></a>
+                                                        <a href="https://recon.bogman.info/blog/" class="r0r5Y _1nbLK _3vXyn"><span class="IY42D">Blog</span></a>
                                                     </li>
                                                     <li class="_1U_q8 _1wl3d">
-                                                        <a href="https://recon-5.jimdosite.com/about-us/" class="r0r5Y _1nbLK _3vXyn"><span class="IY42D">About us</span></a>
+                                                        <a href="https://recon.bogman.info/about-us/" class="r0r5Y _1nbLK _3vXyn"><span class="IY42D">About us</span></a>
                                                     </li>
                                                     <li class="_1U_q8 _1wl3d">
-                                                        <a href="https://recon-5.jimdosite.com/events/" class="r0r5Y _1nbLK _3vXyn"><span class="IY42D">Events</span></a>
+                                                        <a href="https://recon.bogman.info/events/" class="r0r5Y _1nbLK _3vXyn"><span class="IY42D">Events</span></a>
                                                     </li>
                                                     <li class="_1U_q8 _1wl3d">
-                                                        <a href="https://recon-5.jimdosite.com/donations/" class="r0r5Y _1nbLK _3vXyn"><span class="IY42D">Donations</span></a>
+                                                        <a href="https://recon.bogman.info/donations/" class="r0r5Y _1nbLK _3vXyn"><span class="IY42D">Donations</span></a>
                                                     </li>
                                                 </ul>
                                             </nav>
@@ -164,7 +164,7 @@
                                     <div class="RnIH0" style="flex-basis: 234px;">
                                         <div class="_OAVS">
                                             <div>
-                                                <a class="_2TLyx Y-Rie _27iTr _24E0z _1V-os VMMI- css-115ernk" href="https://recon-5.jimdosite.com/events/" draggable="false"><span class="_2f2oQ css-1wta0f">ADVANCED x RECON</span></a>
+                                                <a class="_2TLyx Y-Rie _27iTr _24E0z _1V-os VMMI- css-115ernk" href="https://recon.bogman.info/events/" draggable="false"><span class="_2f2oQ css-1wta0f">ADVANCED x RECON</span></a>
                                             </div>
                                         </div>
                                     </div>
@@ -173,32 +173,32 @@
                                             <ul class="_1DQmA">
                                                 <li class="_371wn _1-X3y">
                                                     <div class="_2GyAR">
-                                                        <a href="https://recon-5.jimdosite.com/" class="r0r5Y bE5vM _3vXyn _10PPp"><span class="IY42D">Home</span></a>
+                                                        <a href="https://recon.bogman.info/" class="r0r5Y bE5vM _3vXyn _10PPp"><span class="IY42D">Home</span></a>
                                                     </div>
                                                 </li>
                                                 <li class="_371wn _1-X3y">
                                                     <div class="_2GyAR">
-                                                        <a href="https://recon-5.jimdosite.com/shop/" class="r0r5Y bE5vM _1UoS- _3vXyn _10PPp"><span class="IY42D">Shop</span></a>
+                                                        <a href="https://recon.bogman.info/shop/" class="r0r5Y bE5vM _1UoS- _3vXyn _10PPp"><span class="IY42D">Shop</span></a>
                                                     </div>
                                                 </li>
                                                 <li class="_371wn _1-X3y">
                                                     <div class="_2GyAR">
-                                                        <a href="https://recon-5.jimdosite.com/blog/" class="r0r5Y bE5vM _3vXyn _10PPp"><span class="IY42D">Blog</span></a>
+                                                        <a href="https://recon.bogman.info/blog/" class="r0r5Y bE5vM _3vXyn _10PPp"><span class="IY42D">Blog</span></a>
                                                     </div>
                                                 </li>
                                                 <li class="_371wn _1-X3y">
                                                     <div class="_2GyAR">
-                                                        <a href="https://recon-5.jimdosite.com/about-us/" class="r0r5Y bE5vM _3vXyn _10PPp"><span class="IY42D">About us</span></a>
+                                                        <a href="https://recon.bogman.info/about-us/" class="r0r5Y bE5vM _3vXyn _10PPp"><span class="IY42D">About us</span></a>
                                                     </div>
                                                 </li>
                                                 <li class="_371wn _1-X3y">
                                                     <div class="_2GyAR">
-                                                        <a href="https://recon-5.jimdosite.com/events/" class="r0r5Y bE5vM _3vXyn _10PPp"><span class="IY42D">Events</span></a>
+                                                        <a href="https://recon.bogman.info/events/" class="r0r5Y bE5vM _3vXyn _10PPp"><span class="IY42D">Events</span></a>
                                                     </div>
                                                 </li>
                                                 <li class="_371wn _1-X3y">
                                                     <div class="_2GyAR">
-                                                        <a href="https://recon-5.jimdosite.com/donations/" class="r0r5Y bE5vM _3vXyn _10PPp"><span class="IY42D">Donations</span></a>
+                                                        <a href="https://recon.bogman.info/donations/" class="r0r5Y bE5vM _3vXyn _10PPp"><span class="IY42D">Donations</span></a>
                                                     </div>
                                                 </li>
                                             </ul>
@@ -1348,7 +1348,7 @@
         hideJimdoAd: false,
         isTrackingEnabled: false,
         jimdoStatisticsStatus: false,
-        domain: "recon-5.jimdosite.com",
+        domain: "recon.bogman.info",
         colorPalette: {
             type: "custom",
             colors: { Black: "#000000", White: "#FFFFFF", Shade1: "#cdc7b3", Shade2: "#1c1c1c", MainColor: "#4f4f4f", SecondaryColor: "#f7c923" },
