--- a/index.html
+++ b/index.html
@@ -105,24 +105,7 @@
                                           <a href="https://recon-5.jimdosite.com/" class="_2XPuU">
                                               <div style="width: 198px; max-width: 100%; padding: 15.4px 0; transition: width 300ms;">
                                                   <div class="UEFNi" style="padding-bottom: 22.27%;">
-                                                      <div class="_1oRwn">
-                                                          <img
-                                                              class="_26QnL _3CPmj"
-                                                              style="width: 100%;"
-                                                              draggable="false"
-                                                              srcset="
-                                                                  https://jimdo-storage.freetls.fastly.net/image/262255773/35becf47-13a4-4901-b807-12e521a7ce08.png?quality=80&amp;auto=webp&amp;disable=upscale&amp;width=320&amp;height=71&amp;trim=0,
-                                                                  0,
-                                                                  0                                                                                                                                                                                     320w,
-                                                                  https://jimdo-storage.freetls.fastly.net/image/262255773/35becf47-13a4-4901-b807-12e521a7ce08.png?quality=80&amp;auto=webp&amp;disable=upscale&amp;width=160&amp;height=36&amp;trim=0,
-                                                                  0,
-                                                                  0                                                                                                                                                                                     160w
-                                                              "
-                                                              sizes="(min-width:1441px) 20vw,(min-width:1281px) 30vw,(min-width:801px) 50vw,(max-width:800px) 75vw,"
-                                                              alt=""
-                                                              loading="lazy"
-                                                          />
-                                                      </div>
+                                                    <div class="_1oRwn"><img class="_26QnL" draggable="false" srcset="https://jimdo-storage.freetls.fastly.net/image/262271792/7fc821c2-44fa-4a79-8341-e0a2ae2e8565.jpg?format=pjpg&amp;quality=80&amp;auto=webp&amp;disable=upscale&amp;width=800&amp;height=382&amp;trim=0,0,189,0 800w, https://jimdo-storage.freetls.fastly.net/image/262271792/7fc821c2-44fa-4a79-8341-e0a2ae2e8565.jpg?format=pjpg&amp;quality=80&amp;auto=webp&amp;disable=upscale&amp;width=640&amp;height=306&amp;trim=0,0,189,0 640w, https://jimdo-storage.freetls.fastly.net/image/262271792/7fc821c2-44fa-4a79-8341-e0a2ae2e8565.jpg?format=pjpg&amp;quality=80&amp;auto=webp&amp;disable=upscale&amp;width=480&amp;height=229&amp;trim=0,0,189,0 480w, https://jimdo-storage.freetls.fastly.net/image/262271792/7fc821c2-44fa-4a79-8341-e0a2ae2e8565.jpg?format=pjpg&amp;quality=80&amp;auto=webp&amp;disable=upscale&amp;width=320&amp;height=153&amp;trim=0,0,189,0 320w, https://jimdo-storage.freetls.fastly.net/image/262271792/7fc821c2-44fa-4a79-8341-e0a2ae2e8565.jpg?format=pjpg&amp;quality=80&amp;auto=webp&amp;disable=upscale&amp;width=160&amp;height=76&amp;trim=0,0,189,0 160w" alt="" loading="lazy"></div>
                                                   </div>
                                               </div>
                                           </a>
