--- a/about-us/index.html
+++ b/about-us/index.html
@@ -102,7 +102,7 @@
                             <div class="_1K-Cu _2X_xx _3JryN">
                                 <div class="tZTy2" style="flex-basis: 234px;">
                                     <div class="_1GQ3E">
-                                        <a href="https://recon-5.jimdosite.com/" class="_2XPuU">
+                                        <a href="https://recon.bogman.info/" class="_2XPuU">
                                             <div style="width:198px;max-width:100%;padding:15.4px 0;transition:width 300ms">
                                                 <div class="UEFNi" style="padding-bottom:22.27%">
                                                     <div class="_1oRwn"><img class="_26QnL _3CPmj" style="width:100%" draggable="false" srcset="https://jimdo-storage.freetls.fastly.net/image/262255773/35becf47-13a4-4901-b807-12e521a7ce08.png?quality=80&amp;auto=webp&amp;disable=upscale&amp;width=320&amp;height=71&amp;trim=0,0,0,0 320w, https://jimdo-storage.freetls.fastly.net/image/262255773/35becf47-13a4-4901-b807-12e521a7ce08.png?quality=80&amp;auto=webp&amp;disable=upscale&amp;width=160&amp;height=36&amp;trim=0,0,0,0 160w"
@@ -112,7 +112,7 @@
                                         </a>
                                     </div>
                                     <div class="_1yXWX">
-                                        <a href="https://recon-5.jimdosite.com/" class="_2XPuU">
+                                        <a href="https://recon.bogman.info/" class="_2XPuU">
                                             <div class="_2LU_w _1rS1_">
                                                 <div class="css-19pa3ra _8xAV3">
                                                     <p class="_2rJOl"></p>
