--- a/donations/index.html
+++ b/donations/index.html
@@ -102,7 +102,7 @@
                               <div class="_1K-Cu _2X_xx _3JryN">
                                   <div class="tZTy2" style="flex-basis: 234px;">
                                       <div class="_1GQ3E">
-                                          <a href="https://recon-5.jimdosite.com/" class="_2XPuU">
+                                          <a href="https://recon.bogman.info/" class="_2XPuU">
                                               <div style="width: 198px; max-width: 100%; padding: 15.4px 0; transition: width 300ms;">
                                                   <div class="UEFNi" style="padding-bottom: 22.27%;">
                                                       <div class="_1oRwn">
@@ -128,7 +128,7 @@
                                           </a>
                                       </div>
                                       <div class="_1yXWX">
-                                          <a href="https://recon-5.jimdosite.com/" class="_2XPuU">
+                                          <a href="https://recon.bogman.info/" class="_2XPuU">
                                               <div class="_2LU_w _1rS1_">
                                                   <div class="VMMI-"><p class="_2rJOl"></p></div>
                                               </div>
